0.8.9
-----
  * Fixed dracut hook install
  * Fix debug mode in load_kdump()

0.8.8
-----
  * Support as a dracut module
  * New kdumptool command: calibrate
  * New kdumptool flag: NOSPLIT
  * Add disable_cpu_apicid parameter to the command line on x86 to prevent
    bringing up the BSP in the kdump kernel.
  * Use nr_cpus instead of maxcpus with recent kernels.

0.8.7
-----
  * Change libelf interface to elfutils (libelf1)
  * Fix parsing of command line options (e.g. --dump for save_dump)
  * Add new tests
  * Many code cleanups

0.8.6
-----
  * Support for IPv6 targets
  * Unmount all filesystems before rebooting in the kdump environment

0.8.5
-----
  * Always use /proc/mounts instead of /etc/mtab.
  * Do not use formatting on dumb terminals (e.g. the 3270 console).
  * Add a new command that modifies multipath.conf to blacklist all
    devices except those specified on the command line: multipath
  * Store a modified multipath.conf in the initrd if needed.
  * Close a race condition between creating the kdump initrd and
    restricting its file permissions to avoid information leak.
  * Change sysconfig.kdump defaults:
      o KDUMP_CONTINUE_ON_ERROR now defaults to true
      o KDUMP_DUMPLEVEL now defaults to 31
      o KDUMP_CPUS is considered EXPERIMENTAL and unstable
  * Add KDUMP_FADUMP as a configuration option.
  * Improve the kdump kernel command line:
      o Disable zfcp LUN scan on s390(x)
      o Do not allocate hugepages
  * Include hpwdt kernel module in the kdump kernel if HP hardware is found.

0.8.4
-----
  * Do not reboot after taking a dump with fadump.
  * Add a new command to dump the configuration variables: dump_config
  * Configuration options can be passed via the kernel command line.
  * Add a helper script (kdump-bootloader.pl) for updating the boot
    loader configuration.
  * Support for kdump on S/390x.

0.8.3
-----
  * Update the text of the license (new FSF address).