@@ -30,7 +30,8 @@ fi
 #
 # Copy or create all necessary files for the initrd
 #
-kdump_setup_files "$tmp_mnt" root "$blockdev" "${#kdump_mnt[@]}"
+kdump_setup_files "$tmp_mnt" root "$blockdev" \
+    "${#kdump_mnt[@]}" "${kdump_mnt[0]}"
 
 #
 # check if extra modules are needed
